--- a/src/assets/i18n/ur.json
+++ b/src/assets/i18n/ur.json
@@ -1,11 +1,16 @@
 {
   "TITLE":"خریداری کی فہرست",
   "SETTINGS":"ترتیبات",
+  "ADD":"نیا آئٹم شامل کریں",
   "EDIT":"ترمیم",
   "DONE":"ہو گیا",
   "PENDING":"منتقلی",
   "REMOVE":"دور",
   "CANCEL":"منسوخ کریں",
 
-  "CLANG":"زبان تبدیل کریں"
+  "CLANG":"زبان تبدیل کریں",
+
+  "NAME":"نام",
+  "NUMBER":"تعداد",
+  "BTNADD":"شامل کریں"
 }
