Edit Item Complete

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,5 +12,8 @@
 
   "NAME":"Item Name",
   "NUMBER":"Item Number",
-  "BTNADD":"Add"
+  "BTNADD":"Add",
+  "BTNEDIT":"Edit Item",
+
+  "NOITEM":"There is no item."
 }
