--- a/src/assets/i18n/ur.json
+++ b/src/assets/i18n/ur.json
@@ -12,5 +12,8 @@
 
   "NAME":"نام",
   "NUMBER":"تعداد",
-  "BTNADD":"شامل کریں"
+  "BTNADD":"شامل کریں",
+  "BTNEDIT":"آئٹم میں ترمیم کریں",
+  
+  "NOITEM":"کوئی آئٹم موجود نہیں ہے."
 }
