Add language support for edit page and set language dialog action buttons

--- a/src/assets/i18n/ur.json
+++ b/src/assets/i18n/ur.json
@@ -5,8 +5,9 @@
   "EDIT":"ترمیم",
   "DONE":"ہو گیا",
   "PENDING":"منتقلی",
-  "REMOVE":"دور",
+  "REMOVE":"ہٹا دیں",
   "CANCEL":"منسوخ کریں",
+  "OK":"ٹھیک ہے",
 
   "CLANG":"زبان تبدیل کریں",
 
@@ -14,6 +15,9 @@
   "NUMBER":"تعداد",
   "BTNADD":"شامل کریں",
   "BTNEDIT":"آئٹم میں ترمیم کریں",
-  
-  "NOITEM":"کوئی آئٹم موجود نہیں ہے."
+
+  "NOITEM":"کوئی آئٹم موجود نہیں ہے.",
+
+  "EN":"انگریزی",
+  "UR":"اردو"
 }
