--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "PENDING":"Pending",
   "REMOVE":"Remove",
   "CANCEL":"Cancel",
+  "OK":"Ok",
 
   "CLANG":"Change Language",
 
@@ -15,5 +16,8 @@
   "BTNADD":"Add",
   "BTNEDIT":"Edit Item",
 
-  "NOITEM":"There is no item."
+  "NOITEM":"There is no item.",
+
+  "EN" : "English",
+  "UR" : "Urdu"
 }
